# ai-buddy

./: .env.local.example  .gitignore  .version-bump.json  LICENSE  README.md  electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.js
.github/workflows/: release.yml
scripts/: bump-version.sh  release.sh  test-update-ui.sh
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/source/: render-app.js  render-tray.js
src-tauri/src/: commands.rs  lib.rs  selection.rs  settings.rs  tray.rs  updater.rs
src/main/: index.ts  preload.ts  store.ts
src/renderer/: App.tsx  CommandPalette.tsx  Settings.tsx  icons.tsx  index.html  index.tsx  styles.css
src/renderer/settings/: AiProviderForm.tsx  CollapsibleSection.tsx  GeneralForm.tsx  IntegrationsForm.tsx  PromptsForm.tsx
src/shared/: ai-service.ts  bridge.ts  electron-api.ts  http.ts  tauri-api.ts  types.ts
src/shared/data-sources/: github.ts  jira.ts
src/tools/: actions.ts  activity-notes.ts  ask.ts  explain.ts  prompt-refiner.ts  registry.ts  rephrase.ts  review-polish.ts  summarizer.ts
