[package]
name = "app"
version = "2.1.3"
description = "Developer productivity tray app"
authors = ["Mek"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
# Use native-tls (macOS Secure Transport) instead of the default rustls/webpki
# roots so HTTPS trusts the system keychain — including corporate MITM proxy
# root CAs. With rustls' bundled roots, those re-signed certs fail as
# "invalid peer certificate: UnknownIssuer". native-tls-alpn keeps HTTP/2.
tauri-plugin-http = { version = "2", default-features = false, features = [
    "native-tls",
    "native-tls-alpn",
    "http2",
    "charset",
    "macos-system-configuration",
    "cookies",
] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
window-vibrancy = "0.6"
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
core-graphics = "0.24"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
core-foundation = "0.10"
